# jngl-spine

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: macos.yml  windows.yml
data/: coin-pro.atlas  coin-pro.json  coin-pro.skel  dog_01_normal.atlas  dog_01_normal.json  dog_01_normal.skel  tank-pro.atlas  tank-pro.json  tank-pro.skel  vine-pro.atlas  vine-pro.json  vine-pro.skel
src/: SkeletonRenderer.hpp  main.cpp  spineJNGLRenderer.cpp  spineJNGLRenderer.hpp
subprojects/spine-c/spine-c-unit-tests/tests/: C_InterfaceTestFixture.cpp
